2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2012-05-28  Andreas Kupries  <andreask@activestate.com>

	* autoproxy.tcl: Fixed bug where https proxying was attempted
	* autoproxy.man: in the face of a domain exception. The TLS
	* pkgIndex.tcl: setup code has to 'filter' properly. Further
	  check for existence of state(code), it may not exist (Server
	  accepts initial connection, then eof's during the TLS
	  handshake). Bumped version number to 1.5.3.

2012-02-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* autoproxy.tcl: Applied suggested fix from bug #3313923 to fix
	handling of the -authProc option.

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2010-10-26  Andreas Kupries  <andreask@activestate.com>

	* autoproxy.man: [Bug 3094654]: Made the spelling of options
	  consistent, all using their '-'.

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* autoproxy.pcx: New file. Syntax definitions for the public
	  commands of the autoproxy package.

2008-02-29  Andreas Kupries  <andreask@activestate.com>

	* autoproxy.tcl (::autoproxy::init, ::autoproxy::GetWin32Proxy):
	  Added tclchecker pragmas to suppress false non-portable command
	  warnings.

	* autoproxy.tcl (::autoproxy::cget): Removed bogus closing